# pointSegment

./: .gitignore  README.md
data/: level_0_0_0.mtl  level_1_0_0.mtl  level_2_0_0.mtl  level_3_0_0.mtl  level_4_0_0.mtl
pointSegment/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  meshhandler.cpp  meshhandler.h
